<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="18dp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/img_user_commentator"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/user_profile_picture" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_comment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_gravity="top"
                android:textStyle="bold"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/comment"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="14dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>