<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.detail.DetailTipsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="68dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tips_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_title"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:textStyle="bold"
                android:textColor="@color/light_green"
                />

            <TextView
                android:id="@+id/tv_date_posted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_posted"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                />

            <ImageView
                android:id="@+id/img_tips"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:background="@color/black"
                android:contentDescription="@string/content_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_user_uploader"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:contentDescription="@string/user_profile_picture" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tips_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/tips_content"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/light_green"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:text="@string/comment"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/white"
        app:contentPaddingLeft="18dp"
        app:contentPaddingRight="18dp"
        app:contentPaddingTop="10dp"
        app:contentPaddingBottom="10dp"
        app:cardElevation="14dp"
        android:layout_alignParentBottom="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_user_owner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:contentDescription="@string/user_profile_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edt_comment"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/add_a_comment"
                android:minHeight="48dp"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_user_owner"
                app:layout_constraintEnd_toStartOf="@id/btn_send"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_baseline_send_24"
                android:backgroundTint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>