<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/parent_padding"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="24dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="120dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/avatarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatarImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@color/purple_500" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/name_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/avatarContainer"
            app:layout_constraintTop_toTopOf="@+id/avatarContainer" />

        <TextView
            android:id="@+id/userTypeTV"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/blue_light_btn_bg"
            android:gravity="center"
            android:text="@string/pro_txt"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/usernameTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/usernameTv"
            app:layout_constraintTop_toTopOf="@+id/usernameTv" />

        <TextView
            android:id="@+id/userProTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/job_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/usernameTv"
            app:layout_constraintTop_toBottomOf="@+id/usernameTv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/followBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_dark_btn_bg"
            android:includeFontPadding="false"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/messageBtn"
            app:layout_constraintStart_toEndOf="@+id/avatarContainer"
            app:layout_constraintTop_toBottomOf="@+id/userProTv"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/messageBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/grey_btn_bg"
            android:includeFontPadding="false"
            android:text="@string/message_txt"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/followBtn"
            app:layout_constraintTop_toTopOf="@+id/followBtn" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_btn_bg"
            app:layout_constraintBottom_toBottomOf="@+id/messageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/messageBtn"
            app:layout_constraintTop_toTopOf="@+id/messageBtn"
            app:srcCompat="@drawable/ic_more_horiz"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/likeCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/n_a_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/followersCountTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/likesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/likes_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@id/likeCountTv"
            app:layout_constraintStart_toStartOf="@id/likeCountTv"
            app:layout_constraintTop_toBottomOf="@+id/likeCountTv" />

        <TextView
            android:id="@+id/followersCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/n_a_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/followingCountTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/likeCountTv"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/followersTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/likes_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@id/followersCountTv"
            app:layout_constraintStart_toStartOf="@id/followersCountTv"
            app:layout_constraintTop_toBottomOf="@+id/followersCountTv" />

        <TextView
            android:id="@+id/followingCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/n_a_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/followersCountTv"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/followingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/following_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="@+id/followingCountTv"
            app:layout_constraintStart_toStartOf="@+id/followingCountTv"
            app:layout_constraintTop_toBottomOf="@+id/followingCountTv" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="#303030"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/likesTv" />

        <TextView
            android:id="@+id/my_post"
            style="@style/viewParent.headerText"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/my_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            style="@style/viewParent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/see_all"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/headerMoreTextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/my_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/my_post" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>