<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="@dimen/parent_padding"
    android:paddingEnd="@dimen/parent_padding"
    android:paddingBottom="@dimen/parent_padding"
    tools:context=".ui.home.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_pad"
                android:orientation="vertical">

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_name" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:minHeight="200dp"
                        app:cardBackgroundColor="#FF402D"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="2dp"
                        app:cardPreventCornerOverlap="false">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/first_desc_home"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <ProgressBar
                                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                                android:layout_width="150dp"
                                android:layout_height="5dp"
                                android:layout_marginTop="15dp"
                                android:progress="60"
                                android:progressDrawable="@drawable/progress_drawable" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="@string/let_s_go"
                                android:textColor="@color/white"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image_home"
                        android:cropToPadding="true"
                        android:elevation="@dimen/card_image_elevation"
                        android:src="@drawable/header_image" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="60dp"
                        android:background="@drawable/refer_earn_button"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/third_desc_home"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/icon_notification"
                        android:cropToPadding="true"
                        android:src="@drawable/ic_home_img" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        style="@style/viewParent.headerText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/tips_and_trick" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/see_all"
                        android:textColor="@color/teal_200"
                        android:textSize="@dimen/headerMoreTextSize"
                        android:textStyle="bold" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:listitem="@layout/row_item" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/row_item" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/third_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_description"
                android:focusable="true"
                android:visibility="gone"
                app:elevation="6dp"
                app:fabSize="mini"
                app:layout_anchor="@id/main_fab"
                app:layout_constraintBottom_toTopOf="@id/second_fab"
                app:layout_constraintEnd_toEndOf="@+id/second_fab"
                app:layout_constraintStart_toStartOf="@+id/second_fab"
                app:srcCompat="@drawable/ic_post_tips"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/second_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_description"
                android:focusable="true"
                android:visibility="gone"
                app:elevation="6dp"
                app:fabSize="mini"
                app:layout_anchor="@id/main_fab"
                app:layout_constraintBottom_toTopOf="@id/main_fab"
                app:layout_constraintEnd_toEndOf="@+id/main_fab"
                app:layout_constraintStart_toStartOf="@+id/main_fab"
                app:srcCompat="@drawable/ic_post_product"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/purple_light"
                android:clickable="true"
                android:contentDescription="@string/content_description"
                android:focusable="true"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_add"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>